oxiplate-derive/tests/broken/derive/colon.stderr
error: Failed to parse inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/colon.rs:4:19
  |
4 | #[oxiplate_inline(:)]
  |                   ^

error: expected an expression
 --> tests/broken/derive/colon.rs:4:19
  |
4 | #[oxiplate_inline(:)]
  |                   ^
